# CIR

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cir  example.cas  main.cpp  test_instructions.cpp
_codeql_build_dir/: CIR  CMakeCache.txt  Makefile  cmake_install.cmake
core/: asm.h  cir.cpp  cir.h  config.h  std.h
core/helpers/: cli.h  heap.h  scalc.h  sdynlib.h
doc/: assembly.md
examples/dl-imports/: .gitignore  Makefile  example.cpp  main.cas
examples/inline-functions/: main.cas
tools/debugger/: main.cpp
tools/disassembly/: main.cpp
